--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -217,11 +217,6 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
     <div class="row muted"><span>Impuestos</span><span id="lblImpuestos">$0.00</span></div>
     <div class="row big"><span>Total</span><span id="lblTotal">$0.00</span></div>
   </div>
-<div class="actions">
-<button class="btn azul" id="btnCorteRuta">
-  📊 Generar Corte de Ruta
-</button>
-
 </div>
 
   
@@ -229,9 +224,8 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
     <button class="btn" id="btnCobrar">Cobrar</button>
   </div>
 </section>
-
-<!-- 📱 BARRA INFERIOR FIJA PARA BOTONES -->
 <div id="bottomBar">
+  <button id="btnCorteRuta" class="bar-btn azul">📊 Corte</button>
   <button id="btnResumen" class="bar-btn azul">📊 Resumen</button>
   <button id="btnLogout" class="bar-btn rojo">🚪 Salir</button>
 </div>
