--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2663,5 +2663,8 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 });
 
 </script>
+<footer class="provsoft-footer">
+  PROVSOFT POS · v2.0 · Commit 2246562 · © ProvSoft
+</footer>
 </body>
 </html>
