--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -841,7 +841,8 @@ if (!prod.departamento_id || prod.departamento_id === "null" || prod.departament
       cantidad: cant,
       precioUnit: Number(prod.precioPublico || 0),
       importe: cant * Number(prod.precioPublico || 0),
-
+      departamento: prod.departamento || null,
+      departamento_id: prod.departamento_id || null,
       claveSat: prod.claveSat || null,
       unidadSat: prod.unidadMedidaSat || null,
       ivaTasa: prod.ivaTasa ?? 0,
@@ -869,7 +870,8 @@ if (!prod.departamento_id || prod.departamento_id === "null" || prod.departament
       cantidad: cant,
       precioUnit: precioCorrecto,
       importe: cant * precioCorrecto,
-
+      departamento: prod.departamento || null,
+      departamento_id: prod.departamento_id || null,
       claveSat: prod.claveSat || null,
       unidadSat: prod.unidadMedidaSat || null,
       ivaTasa: prod.ivaTasa ?? 0,
