--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2666,7 +2666,7 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 
 </script>
 <footer class="provsoft-footer">
-  PROVSOFT POS · v2.0 · Commit 2246562 · © ProvSoft
+  PROVSOFT POS · v2.0 · Commit 2246562 --> c2143cf · © ProvSoft
 </footer>
 </body>
 </html>
