--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2678,7 +2678,7 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 
 </script>
 <footer class="provsoft-footer">
-  PROVSOFT POS · v2.0 · Commit 2246562 --> c2143cf --> 8862f85 · © ProvSoft
+  PROVSOFT POS · v2.0 · Commit e817ba0 · © ProvSoft
 </footer>
 </body>
 </html>
