--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2627,7 +2627,7 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 
 </script>
 <footer class="provsoft-footer">
-  PROVSOFT POS · v2.0 · Commit e817ba0 · © ProvSoft
+  PROVSOFT POS · v2.0 · Commit e817ba0 --> 6602a8b · © ProvSoft
 </footer>
 </body>
 </html>
