--- a/POSVTA4/corterutamovil.html
+++ b/POSVTA4/corterutamovil.html
@@ -147,7 +147,7 @@ VENTA POR DEPARTAMENTO
   texto += `${nombre}$${mxn(v.importe)}\n`;
 });
 
-  texto+="\n--------------------------------\n¡PROVEEDORA LE DESEA FELIZ NAVIDA Y AÑO NUEVO!\n";
+  texto+="\n--------------------------------\n¡PROVEEDORA LE DESEA FELIZ NAVIDAD Y AÑO NUEVO!\n";
   overlayText.textContent = "Imprimiendo corte...";
 imprimirRAWBT(texto);
 
