--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1495,7 +1495,7 @@ $("#btnConfirmarCobro").onclick = async () => {
   </span>
   <br>
   <span style="font-size:18px; color:#9eff9e;">
-    Y NO OLVIDES: EL SALUDO "BUENOS DÍAS" Y LAS "GRACIAS BUEN DIA" AL FINALIZAR 🙌
+    NO OLVIDES EL "BUENOS DÍAS" Y "FELIZ NAVIDAD" 🙌
   </span>
 </div>
 
