--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2631,3 +2631,15 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 </footer>
 </body>
 </html>
+
+<!--
+📌 NOTAS PROVSOFT – 2025-12-15
+--------------------------------
+- Revisar si el carrito de compras es infinito
+- Sospecha: se bloquea después de X productos
+- Validar:
+  - Límite en array del carrito
+  - Límite en Firestore
+  - Renderizado del DOM
+Pendiente: hacer stress test con 100+ items
+-->
