--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2635,11 +2635,6 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 <!--
 📌 NOTAS PROVSOFT – 2025-12-15
 --------------------------------
-- Revisar si el carrito de compras es infinito
-- Sospecha: se bloquea después de X productos
-- Validar:
-  - Límite en array del carrito
-  - Límite en Firestore
-  - Renderizado del DOM
-Pendiente: hacer stress test con 100+ items
+- 
+- CORTES NO FUNCIONA Y EL CARRTIO NO AGREGA EL BUSCADOR
 -->
